# invariant-point-attention

./: .gitignore  denoise.py  pyproject.toml
invariant_point_attention/: invariant_point_attention.py  quaternion.py
notebooks/: denoise.ipynb
